# mgk-solana

./: .env  .gitignore  ANCHOR_LIQUIDITY_ISSUES.md  ARCIUM_PRIVATE_PERPS_ARCHITECTURE.md  ARCIUM_PRIVATE_PERPS_PRODUCT_SPEC.md  Anchor.toml  Arcium.toml  MIXER_POOL_ARCHITECTURE.md  OFFCHAIN_CIRCUITS_SETUP.md  ORDERBOOK_ARCHITECTURE.md  README.md  UPLOAD_CIRCUITS_GUIDE.md  package-lock.json  package.json  perpetuals.json
.cursor/: scratchpad.md
app/: README.md  package.json  tsconfig.json
app/src/: cli.ts  client.ts  encryption.ts  order_matching_client.ts  types.ts
app/src/adapter/: PerpetualsAdapter.ts  README.md  index.ts  types.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs  types.rs
programs/blackjack/: Cargo.toml
programs/blackjack/src/: lib.rs  state.rs
programs/perpetuals/: Cargo.toml
programs/perpetuals/src/: lib.rs  state.rs
programs/perpetuals/src/utils/: confidential_spl.rs  encryption.rs  mod.rs  order_matching.rs
tests/: admin-functions.ts  order-matching-integration.ts  perpetuals-public.ts  perpetuals.ts  swap-liquidity.ts  view-functions-simple.ts  view-functions.ts
tests/helpers/: TestClient.ts
tests/order-matching/: market-init.test.ts  order-submission.test.ts
ui/: package-lock.json  package.json  tsconfig.json
ui/.next/: build-manifest.json  react-loadable-manifest.json  trace
ui/.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
ui/src/actions/: changeLiquidity.ts  openPosition.ts
ui/src/adapter/: PerpetualsAdapter.ts  PerpetualsService.ts  encryption.ts  (+3 more)
(+126 files in other folders)
